<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Name -->
    <string name="app_name">Video Wallpaper Template</string>

    <!-- Name in Live Wallpaper Picker list -->
    <string name="lwp_name">Video Template</string>

    <!-- Description in Live Wallpaper Picker list -->
    <string name="lwp_desc">Video Wallpaper Template, select a movie and define as livewallpaper</string>

    <!-- Author -->
    <string name="lwp_author">Ravenfeld</string>

    <!-- Quick little message displayed when the Live Wallpaper Picker is opened -->
    <!-- The message text is the prefix, lwp_name, and suffix concatenated -->
    <string name="picker_toast_prefix">Choose \"</string>
    <string name="picker_toast_suffix">\" from the list of live wallpapers</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
	<string name="chooser_label">label</string>
	<string name="mute">Mute movie</string>
	<string name="mute_enabled">Mute enabled</string>
	<string name="mute_disabled">Mute disabled</string>
	<string name="file">Video source</string>
	<string name="file_summary">File</string>


	<string name="renderer_mode_list_summary">Mode </string>
	<string name="renderer_mode_list">Renderer mode</string>	
	<string name="classic">Classic</string>
	<string name="letter_boxed">Letter_boxed</string>
	<string name="stretched">Stretched</string>
</resources>